Change header input font size 16px to 14px Input and select text alignment Fix Backtotap button icon vertical and horizontal center problem #9

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -362,6 +362,9 @@ body.boxed {
   select {
     text-indent: 0;
   }
+  input {
+    text-indent: 2px;
+  }
   button {
     padding-left: 18px;
     padding-right: 18px;
@@ -439,6 +442,9 @@ body.boxed {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+  .search-container input, .search-container select {
+    font-size: 14px;
   }
 }
 
